UI changes for the Drag View Test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_activity_navigation_map">NavigationMapActivity</string>
     <string name="title_activity_note_list">NoteListActivity</string>
     <string name="title_activity_note_edit">NoteEditActivity</string>
+    <string name="title_activity_drag_test">DragTestActivityActivity</string>
 </resources>
