--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_drag_test">DragTestActivityActivity</string>
     <string name="title_activity_network_call_list">NetworkCallListActivity</string>
     <string name="title_activity_shared_prefrences">SharedPrefrencesActivity</string>
+    <string name="title_activity_post_request">PostRequestActivity</string>
 </resources>
