--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="title_activity_post_request">PostRequestActivity</string>
     <string name="title_activity_loaders_list">LoadersListActivity</string>
     <string name="title_activity_loader_test_one">LoaderTestOneActivity</string>
+    <string name="title_activity_list_view_test_one">ListViewTestOneActivity</string>
 </resources>
