--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="title_activity_listv_view_list">ListvViewListActivity</string>
     <string name="title_activity_services_list">ServicesListActivity</string>
     <string name="title_activity_service_test_one">ServiceTestOneActivity</string>
+    <string name="title_activity_random_test">RandomTestActivity</string>
 </resources>
