--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="title_activity_random_test">RandomTestActivity</string>
     <string name="title_activity_example_one">ExampleOneActivity</string>
     <string name="title_activity_spinner_list">SpinnerListActivity</string>
+    <string name="title_activity_spinner_test_one">SpinnerTestOneActivity</string>
 </resources>
