--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="title_activity_example_one">ExampleOneActivity</string>
     <string name="title_activity_spinner_list">SpinnerListActivity</string>
     <string name="title_activity_spinner_test_one">SpinnerTestOneActivity</string>
+    <string name="title_activity_service_test_two">ServiceTestTwoActivity</string>
 </resources>
