--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="title_activity_spinner_list">SpinnerListActivity</string>
     <string name="title_activity_spinner_test_one">SpinnerTestOneActivity</string>
     <string name="title_activity_service_test_two">ServiceTestTwoActivity</string>
+    <string name="title_activity_spinner_test_two">SpinnerTestTwoActivity</string>
 </resources>
