--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="title_activity_service_test_two">ServiceTestTwoActivity</string>
     <string name="title_activity_spinner_test_two">SpinnerTestTwoActivity</string>
     <string name="title_activity_sqlite_list">SqliteListActivity</string>
+    <string name="title_activity_sqlite_test_one">SqliteTestOneActivity</string>
 </resources>
