--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
     <string name="title_activity_google_map_test_one">Map</string>
     <string name="title_activity_google_map_test_two">GoogleMapTestTwoActivity</string>
     <string name="title_activity_test_thread">TestThreadActivity</string>
+    <string name="title_activity_drag_test_two">DragTestTwoActivity</string>
 </resources>
