some example to answer question on StackOverflow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="title_activity_contextual_action_mode_test_one">
         ContextualActionModeTestOneActivity
     </string>
+    <string name="title_activity_drag_list">DragListActivity</string>
+    <string name="title_activity_draging_image">DragingImageActivity</string>
 </resources>
