--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="title_activity_draging_image">DragingImageActivity</string>
     <string name="title_activity_list_view_test">ListViewTestActivity</string>
     <string name="title_activity_decrypt_image">DecryptImageActivity</string>
+    <string name="title_activity_google_map_test_three">GoogleMapTestThreeActivity</string>
 </resources>
