--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="title_activity_google_map_six_launch">GoogleMapSixLaunchActivity</string>
     <string name="title_activity_google_map_seven_camera">GoogleMapSevenCameraActivity</string>
     <string name="title_activity_list_view_test_fice">ListViewTestFiceActivity</string>
+    <string name="title_activity_image_view_dynamically">ImageViewDynamicallyActivity</string>
 </resources>
