--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,5 @@
     <string name="title_activity_google_map_ten_markers">GoogleMapTenMarkersActivity</string>
     <string name="title_activity_parse_json_test_one">ParseJsonTestOneActivity</string>
     <string name="title_activity_google_map_info_window">GoogleMapInfoWindowActivity</string>
+    <string name="title_activity_test_percent_one">TestPercentOneActivity</string>
 </resources>
