--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,11 @@
     <string name="title_activity_google_map_info_window">GoogleMapInfoWindowActivity</string>
     <string name="title_activity_test_percent_one">TestPercentOneActivity</string>
     <string name="title_activity_percent_two">PercentTwoActivity</string>
+    <string name="title_activity_show_image">ShowImageActivity</string>
+    <string name="title_activity_show_image_two">ShowImageTwoActivity</string>
+    <string name="title_activity_view_pager_list">ViewPagerListActivity</string>
+    <string name="title_activity_view_pager_test_one">ViewPagerTestOneActivity</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
