--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_listview_test_seven">ListviewTestSevenActivity</string>
+    <string name="title_activity_read_from_asset">ReadFromAssetActivity</string>
 </resources>
