--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="title_activity_recycler_view_one">RecyclerViewOneActivity</string>
     <string name="title_activity_spinner_country">SpinnerCountryActivity</string>
     <string name="title_activity_spinner_load_from_network">SpinnerLoadFromNetworkActivity</string>
+    <string name="title_activity_service_three">ServiceThreeActivity</string>
 </resources>
