added IntentService example in ServiceFourActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="title_activity_spinner_country">SpinnerCountryActivity</string>
     <string name="title_activity_spinner_load_from_network">SpinnerLoadFromNetworkActivity</string>
     <string name="title_activity_service_three">ServiceThreeActivity</string>
+    <string name="title_activity_service_four">ServiceFourActivity</string>
 </resources>
