--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,4 +96,5 @@
     <string name="title_activity_spinner_load_from_network">SpinnerLoadFromNetworkActivity</string>
     <string name="title_activity_service_three">ServiceThreeActivity</string>
     <string name="title_activity_service_four">ServiceFourActivity</string>
+    <string name="title_activity_service_five_bound">ServiceFiveBoundActivity</string>
 </resources>
