spinner example three added to show starting point added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,5 @@
     <string name="title_activity_service_three">ServiceThreeActivity</string>
     <string name="title_activity_service_four">ServiceFourActivity</string>
     <string name="title_activity_service_five_bound">ServiceFiveBoundActivity</string>
+    <string name="title_activity_spinner_test_three">SpinnerTestThreeActivity</string>
 </resources>
