--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,5 @@
     <string name="title_activity_spinner_test_three">SpinnerTestThreeActivity</string>
     <string name="title_activity_data_binding_list">DataBindingListActivity</string>
     <string name="title_activity_data_binding_test_one">DataBindingTestOneActivity</string>
+    <string name="title_activity_list_view_test_seven">ListViewTestSevenActivity</string>
 </resources>
