--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,6 @@
     <string name="title_activity_data_binding_list">DataBindingListActivity</string>
     <string name="title_activity_data_binding_test_one">DataBindingTestOneActivity</string>
     <string name="title_activity_list_view_test_seven">ListViewTestSevenActivity</string>
+    <string name="title_activity_data_binding_two">DataBindingTwoActivity</string>
+    <string name="title_activity_data_binding_three">DataBindingThreeActivity</string>
 </resources>
