added example for Observable Object to the DataBinding layout to listen to the changes to the object property

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,5 @@
     <string name="title_activity_data_binding_two">DataBindingTwoActivity</string>
     <string name="title_activity_data_binding_three">DataBindingThreeActivity</string>
     <string name="title_activity_data_binding_four">DataBindingFourActivity</string>
+    <string name="title_activity_data_binding_five">DataBindingFiveActivity</string>
 </resources>
