added example of constraint layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
     <string name="title_activity_data_binding_three">DataBindingThreeActivity</string>
     <string name="title_activity_data_binding_four">DataBindingFourActivity</string>
     <string name="title_activity_data_binding_five">DataBindingFiveActivity</string>
+    <string name="title_activity_constraint_list">ConstraintListActivity</string>
+    <string name="title_activity_constraint_one">ConstraintOneActivity</string>
 </resources>
